<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sierra5Plugins</string>
    <string name="account_name">Sierra5 link</string>
    <string name="node_protect">node_protect</string>
    <string name="node_protectDefault">false</string>
    <string name="show_pattern">show_pattern</string>
    <string name="show_patternDefault"></string>
    <string name="show_theme">show_theme</string>
    <string name="show_themeDefault">black</string>
    <string name="template_insertDateTime">template_insertDateTime</string>
    <string name="template_insertDateTimeDefault">M/d HH:mm</string>
    <string name="template_insertTime">template_insertTime</string>
    <string name="template_insertTimeDefault">HH:mm</string>
    <string name="contacts_exp">contacts_exp</string>
    <string name="contacts_expDefault"></string>
    <string name="calendar_exp">calendar_exp</string>
    <string name="calendar_expDefault"></string>
    <string name="calendar_color">calendar_color</string>
    <string name="calendar_colorDefault"></string>
    
    <string name="calendar_duration">calendar_duration</string>
    <string name="calendar_durationDefault">1h</string>
    
    <string name="calendar_reminder">calendar_reminder</string>
    <string name="calendar_reminderDefault">0</string>
    
    <string name="calendar_syncPast">calendar_syncPast</string>
    <string name="calendar_syncPastDefault">3</string>
    
    <string name="calendar_syncFuture">calendar_syncFuture</string>
    <string name="calendar_syncFutureDefault">14</string>
    
    <string name="words_lines">words_lines</string>
    <string name="words_linesDefault">2</string>
    <string name="words_exp">words_exp</string>
    <string name="words_expDefault"></string>
    <string name="words_sizes">words_sizes</string>
    <string name="words_sizesDefault"></string>
    <string name="words_theme">words_theme</string>
    <string name="words_themeDefault">dark</string>
    <string-array name="words_themeCaptions">
        <item>Dark</item>
        <item>Lite</item>
    </string-array>
    <string-array name="words_themeVals">
        <item>dark</item>
        <item>lite</item>
    </string-array>
    <string name="words_lines_visible">words_lines_visible</string>
    <string name="words_lines_visibleDefault">127</string>
    
    <string-array name="widgetBGid">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="widgetBG">
        <item>Transparent</item>
        <item>10% Black</item>
        <item>50% Black</item>
        <item>80% Black</item>
        <item>Black</item>
    </string-array>

</resources>